исправил привязки сущностей в role, nomenclature, company. Убрал session из Employee. Создал обработку исключений not found по id. Начал писать rest контроллеры.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=warehouse
+spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse?useSSL=false
+spring.datasource.username=javaclient
+spring.datasource.password=polipost
