--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-spring.application.name=warehouse
-spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse2?useSSL=false
-spring.datasource.username=javaclient
-spring.datasource.password=polipost
-spring.flyway.baseline-on-migrate=true
+spring.profiles.active=dev
