--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=warehouse
-spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse2?useSSL=false
-spring.datasource.username=javaclient
-spring.datasource.password=polipost
+spring.datasource.url=jdbc:postgresql://192.168.0.105:5432/warehouse2?useSSL=false
+spring.datasource.username=poli_user
+spring.datasource.password=polipass
 
 dadata.url=http://suggestions.dadata.ru/suggestions/api/4_1/rs/findById/party
-dadata.token=Token 0d079eac4036613ccacdfe6d5a6c2ef25d70737b000
+dadata.token=Token 0d079eac4036613ccacdfe6d5a6c2ef25d70737b
